--- a/site/index.html
+++ b/site/index.html
@@ -60,5 +60,8 @@
     <div>
       <strong>Disposable income: $<span id="disposable-income-box"></span></strong>
     </div>
+
+    <canvas id="disposable-income-chart" width="600" height="600"></canvas>
+    <canvas id="emtr-chart" width="600" height="600"></canvas>
   </body>
 </html>
